spiffe-spire-kubernetes-ml-security/ml-service-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-approved-client-to-ml-service
spec:
  podSelector:
    matchLabels:
      app: ml-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: allowed-service
      ports:
        - protocol: TCP
          port: 80
